package br.com.fiap.challenge.tech_challenge_fase_01.domain.user;

public enum RolesEnum {

    OWNER, CLIENT, ADMIN

}
